--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-     "test": "mocha --timeout 10000 --file test/setup.js"
+    "test": "mocha --timeout 10000 --file test/setup.js"
   },
   "keywords": [],
   "author": "",
@@ -19,6 +19,8 @@
     "express": "^5.2.1",
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.1.4",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
     "redis": "^5.10.0"
   },
   "devDependencies": {
